--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -2,9 +2,10 @@
   "name": "useweb-functions",
   "private": true,
   "scripts": {
+    "dev": "concurrently 'npm:build:watch' 'npm:serve'",
     "build": "node scripts/buildFunctions/run.js",
     "build:watch": "node scripts/buildFunctions/run.js --watch",
-    "dev": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start --only functions",
     "deploy": "firebase deploy --only functions"
   },
   "engines": {
@@ -13,6 +14,7 @@
   "main": "build/index.js",
   "dependencies": {
     "command-line-args": "^5.2.0",
+    "concurrently": "^6.4.0",
     "esbuild": "^0.14.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
