--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "source": "firebase/functions",
+    "source": "/",
     "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
   },
   "firestore": {
