--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "firebase/functions/build/index.js",
   "scripts": {
     "dev": "node --loader ts-node/esm ./scripts/dev/run.ts",
-    "dev:with-firebase-emulators": "concurrently 'npm run dev' 'npm run functions:build:watch' 'npm run functions:serve'",
+    "dev:with-firebase-functions": "concurrently 'npm run dev' 'npm run functions:build:watch' 'npm run functions:serve'",
     "dev:refresh-storiesList": "node --loader ts-node/esm ./scripts/dev/run.ts --refresh-stories-list",
     "functions:dev": "concurrently 'npm run functions:build:watch' 'npm run functions:serve'",
     "functions:build": "node --loader ts-node/esm firebase/functions/scripts/buildFunctions/run.js",
