--- a/packages/navigation/Link/package.json
+++ b/packages/navigation/Link/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.6",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
-  "types": "./build/types/index.d.ts",
+  "types": "./src/index/index.d.ts",
   "files": [
     "build"
   ],
