--- a/packages/serverless/firebase/functions/firebase/useFirebaseFunction/package.json
+++ b/packages/serverless/firebase/functions/firebase/useFirebaseFunction/package.json
@@ -14,7 +14,9 @@
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "@useweb/use-firebase": "^5.0.0"
+    "@useweb/use-firebase": "^6.0.1",
+    "@useweb/use-async": "^0.3.3",
+    "firebase": "^9.6.0"
   },
   "devDependencies": {
     "@useweb/compiler": "latest",
