--- a/packages/serverless/firebase/auth/useFirebaseAuth/package.json
+++ b/packages/serverless/firebase/auth/useFirebaseAuth/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/use-firebase",
-  "version": "7.0.0",
+  "name": "@useweb/use-firebase-auth",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,13 +13,12 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "@useweb/use-local-storage": "^1.1.1",
-    "firebase": "^9.6.0"
+    "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "^1.3.0",
-    "@useweb/use-local-storage": "^1.1.1",
-    "firebase": "^9.6.0"
+    "@useweb/compiler": "latest"
+  },
+  "dependencies": {
+    "@useweb/use-firebase": "^7.0.0"
   }
 }
