--- a/packages/dataDisplay/Box/package.json
+++ b/packages/dataDisplay/Box/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@useweb/compiler": "^1.3.0",
+    "@useweb/decamelize": "^0.2.0",
+    "@useweb/remove-duplicates-from-array": "^0.2.0",
     "@useweb/style-system": "^0.1.3",
     "styled-components": "^5.3.3"
   }
