--- a/packages/media/images/Image/package.json
+++ b/packages/media/images/Image/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@useweb/compiler": "^1.3.0",
+    "@useweb/decamelize": "^0.2.0",
+    "@useweb/remove-duplicates-from-array": "^0.2.0",
     "@useweb/style-system": "^0.1.3",
     "image-compressor.js": "^1.1.4",
     "styled-components": "^5.3.3"
