--- a/packages/utils/browser/pullToRefresh/PullToRefresh/package.json
+++ b/packages/utils/browser/pullToRefresh/PullToRefresh/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/pull-to-refresh",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -16,7 +16,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "^1.3.0",
+    "@useweb/compiler": "latest",
     "mobile-pull-to-refresh": "^0.2.2"
   }
 }
