--- a/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
+++ b/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/pull-to-refresh",
-  "version": "2.0.1",
+  "name": "@useweb/use-pull-to-refresh",
+  "version": "1.0.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
