--- a/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
+++ b/packages/utils/browser/pullToRefresh/usePullToRefresh/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@useweb/use-pull-to-refresh",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
   "files": [
-    "build",
-    "public"
+    "build"
   ],
   "scripts": {
     "build": "node ./node_modules/@useweb/compiler/build",
