--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-data",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -23,6 +23,7 @@
     "@useweb/use-async": "^1.1.0",
     "@useweb/use-local-storage": "^1.1.0",
     "swr": "^1.1.0",
-    "zustand": "^3.6.6"
+    "zustand": "^3.6.6",
+    "ts-toolbelt": "^9.6.0"
   }
 }
