--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-data",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -14,8 +14,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.0",
-    "swr": "^1.1.0",
-    "zustand": "^3.6.6"
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "@useweb/array-db": "^0.2.2",
@@ -23,7 +22,6 @@
     "@useweb/use-async": "^1.1.0",
     "@useweb/use-local-storage": "^1.1.0",
     "swr": "^1.1.0",
-    "zustand": "^3.6.6",
     "ts-toolbelt": "^9.6.0"
   }
 }
