--- a/packages/engagement/useInstallPrompt/package.json
+++ b/packages/engagement/useInstallPrompt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-install-prompt",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,8 +13,7 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "@useweb/use-event-listener": "^0.1.2"
+    "react": "^17.0.0"
   },
   "devDependencies": {
     "@useweb/compiler": "^1.3.0",
