--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-data",
-  "version": "5.3.0",
+  "version": "7.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,8 +13,7 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "swr": "^1.1.2"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@useweb/array-db": "^0.3.0",
