--- a/packages/serverless/firebase/auth/useFirebaseAuth/package.json
+++ b/packages/serverless/firebase/auth/useFirebaseAuth/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@useweb/compiler": "latest",
-    "firebase": "^9.6.0"
+    "firebase": "^9.6.0",
+    "zustand": "^3.7.1"
   },
   "dependencies": {
     "@useweb/use-async": "^1.1.0",
