--- a/packages/data/useData/package.json
+++ b/packages/data/useData/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-data",
-  "version": "8.4.0",
+  "version": "8.4.1",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -15,8 +15,10 @@
   "peerDependencies": {
     "react": "^18.0.0"
   },
+  "dependencies": {
+    "@useweb/array-db": "^0.4.0"
+  },
   "devDependencies": {
-    "@useweb/array-db": "^0.4.0",
     "@useweb/compiler": "^1.3.0",
     "@useweb/use-async": "^3.1.0",
     "@useweb/use-local-storage": "^1.2.1",
