--- a/packages/navigation/ClickToComponent/package.json
+++ b/packages/navigation/ClickToComponent/package.json
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build --target esnext",
+    "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "deploy": "npm run build && npm publish --access public"
   },
