--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
     "titleBar.inactiveBackground": "#081427"
   },
   "prettier.configPath": "devtools/prettier/prettierConfig.cjs",
-  "quickComponentCreator.prettierConfigFilePath": "devtools/prettier/prettierConfig.cjs",
-  "quickComponentCreator.schemaFilePath": "devtools/codeGenerator/qcc.schema.cjs"
+  "superCodeGenerator.prettierConfigFilePath": "devtools/prettier/prettierConfig.cjs",
+  "superCodeGenerator.schemaFilePath": "devtools/codeGenerator/qcc.schema.cjs"
 }
