--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "@storybook/react": "^6.5.6",
     "@tippyjs/react": "^4.2.6",
     "babel-loader": "^8.2.3",
+    "command-line-args": "^5.2.0",
+    "concurrently": "^6.4.0",
     "dotenv-parse-variables": "^2.0.0",
+    "esbuild": "^0.14.2",
     "eslint": "^7.26.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.25.3",
@@ -43,15 +46,15 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
     "lerna": "^4.0.0",
+    "npx": "^10.2.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "command-line-args": "^5.2.0",
-    "concurrently": "^6.4.0",
-    "esbuild": "^0.14.2",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "sb": "^6.5.8",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "command-line-args": "^5.2.0",
