--- a/package.json
+++ b/package.json
@@ -24,20 +24,28 @@
     "lerna:minor-update": "lerna exec 'npm i && npm version minor && npm publish' --no-bail",
     "deploy": "node --loader ts-node/esm ./scripts/deploy/run.ts",
     "prettify": "node --loader  ts-node/esm ./devtools/prettier/scripts/runPrettier/runPrettier.ts",
-    "lint": "eslint ./ --fix"
+    "tests:lint": "eslint ./ --fix"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.3",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-links": "^6.5.6",
     "@storybook/builder-vite": "^0.1.36",
     "@storybook/react": "^6.5.6",
     "@tippyjs/react": "^4.2.6",
-    "@typescript-eslint/parser": "^5.27.1",
     "airtable": "^0.11.4",
-    "babel-loader": "^8.2.3",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
+    "lerna": "^5.1.1",
+    "react": "^18.1.0",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "^18.1.0",
+    "styled-components": "^5.3.5",
+    "vite": "^2.9.12"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "command-line-args": "^5.2.0",
     "concurrently": "^6.4.0",
     "dotenv-parse-variables": "^2.0.0",
@@ -49,26 +57,10 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
-    "lerna": "^5.1.1",
-    "npx": "^10.2.2",
-    "react": "^18.1.0",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^18.1.0",
-    "sb": "^6.5.8",
-    "upgrade": "^1.1.0",
-    "vite": "^2.9.12"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "command-line-args": "^5.2.0",
-    "concurrently": "^6.4.0",
     "eslint-plugin-storybook": "^0.5.12",
     "framer-motion": "^5.4.4",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
-    "styled-components": "^5.3.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.7.3"
   }
