--- a/packages/feedback/drawer/package.json
+++ b/packages/feedback/drawer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/box",
-  "version": "2.0.0",
+  "name": "@useweb/drawer",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -8,23 +8,19 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build ",
+    "build": "node ./node_modules/@useweb/compiler/build",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
     "@mui/material": "^5.0.0",
-    "react": "^18.0.0",
-    "@useweb/compiler": "^1.5.0",
     "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1"
+    "@emotion/styled": "^11.8.1",
+    "react": "^18.0.0"
   },
   "devDependencies": {
-    "@mui/material": "^5.0.0",
     "@useweb/compiler": "^1.5.0",
-    "@useweb/decamelize": "^1.0.0",
-    "react-json-editor-ajrm": "^2.5.13",
-    "@useweb/remove-duplicates-from-array": "^1.0.0",
+    "@mui/material": "^5.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1"
   }
