--- a/packages/input/Button/package.json
+++ b/packages/input/Button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@useweb/link",
+  "name": "@useweb/button",
   "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
