--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-links": "^6.5.6",
-    "@storybook/builder-vite": "^0.1.36",
     "@storybook/react": "^6.5.6",
     "@tippyjs/react": "^4.2.6",
     "airtable": "^0.11.4",
@@ -40,14 +39,13 @@
     "react": "^18.1.0",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5",
-    "vite": "^2.9.12"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "command-line-args": "^5.2.0",
-    "concurrently": "^6.4.0",
+    "concurrently": "^7.2.1",
     "dotenv-parse-variables": "^2.0.0",
     "esbuild": "^0.14.2",
     "eslint": "^7.26.0",
