--- a/packages/dataDisplay/Text/package.json
+++ b/packages/dataDisplay/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/text",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,13 +13,16 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "^1.5.0",
-    "@useweb/decamelize": "^0.1.1",
-    "@useweb/remove-duplicates-from-array": "^0.1.1",
-    "@useweb/style-system": "^0.1.3",
-    "styled-components": "^5.3.3"
+    "@useweb/compiler": "latest",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   }
 }
