--- a/packages/theme/UsewebTheme/package.json
+++ b/packages/theme/UsewebTheme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/theme",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -17,7 +17,8 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.0.0",
