--- a/packages/dataDisplay/Box/package.json
+++ b/packages/dataDisplay/Box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/box",
-  "version": "3.0.0",
+  "version": "3.0.4",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,20 +13,20 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "@mui/material": "^5.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@useweb/compiler": "^1.5.0",
     "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1"
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.0.0",
+    "@useweb/compiler": "^1.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "^1.5.0",
     "@useweb/decamelize": "^1.0.0",
-    "react-json-editor-ajrm": "^2.5.13",
     "@useweb/remove-duplicates-from-array": "^1.0.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1"
+    "react-json-editor-ajrm": "^2.5.13"
   }
 }
