--- a/packages/input/IconButton/package.json
+++ b/packages/input/IconButton/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/button",
-  "version": "2.1.0",
+  "name": "@useweb/icon-button",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
