--- a/packages/feedback/Progress/LinearProgress/package.json
+++ b/packages/feedback/Progress/LinearProgress/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/progress-dots",
-  "version": "1.1.0",
+  "name": "@useweb/linear-progress",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,10 +13,18 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "^1.5.0",
-    "styled-components": "^5.3.3"
+    "@useweb/compiler": "latest",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   }
 }
