--- a/packages/input/forms/fields/Textfield/package.json
+++ b/packages/input/forms/fields/Textfield/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@useweb/form",
-  "version": "1.0.0",
+  "name": "@useweb/textfield",
+  "version": "1.1.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
+    "@useweb/text": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.0.0"
@@ -25,7 +26,8 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
     "@useweb/compiler": "latest",
-    "@useweb/textfield": "^1.1.0",
+    "@useweb/form": "^1.0.0",
+    "@useweb/text": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.0.0"
