--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "framer-motion": "^5.4.4",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
+    "prettier": "^2.6.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.7.3"
   }
