--- a/packages/input/forms/fields/Select/package.json
+++ b/packages/input/forms/fields/Select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/select",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -13,18 +13,19 @@
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@mui/material": "^5.0.0",
     "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@useweb/compiler": "latest",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@mui/material": "^5.0.0",
     "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.0",
+    "@useweb/compiler": "latest",
+    "@useweb/form": "^1.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
