--- a/packages/serverless/firebase/auth/useFirebaseAuth/package.json
+++ b/packages/serverless/firebase/auth/useFirebaseAuth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@useweb/use-firebase-auth",
-  "version": "1.5.0",
+  "version": "1.5.2",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
   "types": "./build/types/index.d.ts",
@@ -8,11 +8,12 @@
     "build"
   ],
   "scripts": {
-    "build": "node ./node_modules/@useweb/compiler/build",
+    "build": "node ./node_modules/@useweb/compiler/build --format esm",
     "build:watch": "node ./node_modules/@useweb/compiler/build --watch",
     "deploy": "npm run build && npm publish --access public"
   },
   "peerDependencies": {
+    "firebase": "^9.6.0",
     "react": "^18.0.0"
   },
   "devDependencies": {
@@ -21,7 +22,6 @@
     "zustand": "^3.7.1"
   },
   "dependencies": {
-    "@useweb/use-async": "^1.1.0",
-    "firebase": "^9.6.0"
+    "@useweb/use-async": "^1.1.0"
   }
 }
