--- a/packages/serverless/firebase/auth/useFirebaseAuth/package.json
+++ b/packages/serverless/firebase/auth/useFirebaseAuth/package.json
@@ -20,8 +20,7 @@
   "devDependencies": {
     "@useweb/compiler": "^1.6.0",
     "firebase": "^9.6.0",
-    "zustand": "^3.7.1",
-    "@useweb/use-async": "^3.2.0"
+    "zustand": "^3.7.1"
   },
   "dependencies": {
     "@useweb/use-async": "^3.2.0"
