--- a/packages/theme/UsewebTheme/package.json
+++ b/packages/theme/UsewebTheme/package.json
@@ -3,6 +3,11 @@
   "version": "2.12.0",
   "main": "./build/index.js",
   "author": "Jeremy Tenjo",
+  "keywords": [
+    "react",
+    "mui",
+    "material design"
+  ],
   "types": "./build/types/index.d.ts",
   "files": [
     "build"
